--- a/memos/decision-brain/goals-of-external-stay.tex
+++ b/memos/decision-brain/goals-of-external-stay.tex
@@ -1,30 +1,40 @@
 \section*{Goals of the External Stay}
-For me the three most significant goals of the external stay would be:
+The most significant goals of the external stay are:
 
 \begin{itemize}
-	\item Gauge whether my Ph.D. project can be implemented in practice. 
-	\item Integrate my application into a test environment at Decision Brain.
-	\item Get competent feedback on my scheduling approach. 
+	\item Assess the feasibility of implementing my Ph.D. project in an industry setting.
+	% \item Gauge whether my Ph.D. project can be implemented in practice. 
+	\item Integrate my application into a test environment at Decision Brain, if applicable.
+	\item Get expert feedback on my scheduling methodology. 
+	\item Learn best practices for implementing scheduling solutions in industry.
 \end{itemize}
 
-I have a somewhat naive belief that I have found a solid scalable approach to modelling a generic 
-maintenance scheduling system (see \ref{sec:technical} section below). I am 
+It is my belief that I how developed a scalable approach to modelling a generic 
+maintenance scheduling system (see Section~\ref{sec:technical}). I am 
 modelling something that is similar to what is described on \cite{palmerMaintenancePlanningScheduling2019} 
 which is a source that has a more practical orientation than most academic works. 
 
-My code work on backend SAP tables and user-inputs so I believe that there may be a possibility of integrating my 
-code into a system at Decision Brain if this is deemed of value. Integrating the system at Decision 
-Brain would be ideal as I think that it would enable us judge the potential financial value 
-of a full implementation of my project. It would also make it clear if it is a project that is worth chasing further
-by Decision Brain. 
+My code operates on backend SAP tables and user inputs so I believe that there may be a possibility of integrating my 
+code into a system at Decision Brain if this is deemed valuable. Integrating the system at Decision 
+Brain would allow us to evaluate its potential financial value and determine whether pursuing a
+full implementation could be mutually beneficial.
 
-\section*{Setup of the External Stay}
-My initial idea of a setup with Decision Brain, would be that I get a stable contact for the duration of the external stay with which
-I can discuss my ideas and that I can rely on for help.
+\section*{Possible Setup of the External Stay}
+I propose to have a dedicated contact at Decision Brain during my external stay, with who I can discuss ideas and seek help from.
 
 \begin{itemize}
 	% TODO: This is not that great should be changed
 	\item First month: Determine if I can integrate my application in a relevant project at Decision Brain.
 	\item Second month: Work on implementing the scheduling system in Decision Brain's IT infrastructure.
 	\item Third month: Assess the feasibility of the project and possible course corrections.
+\end{itemize}
+
+The main incentive for Decision Brain to partake in this project would be to get a new perspective on how to develop scheduling solutions,
+a hiring oppurtunity, getting a partial implementation of scheduling code if that is deemed relevant.
+
+Incentives for Decision Brain: 
+\begin{itemize} 
+	\item Gain a fresh perspective on developing scheduling solutions. 
+	\item Opportunity to evaluate and potentially recruit a skilled researcher. 
+	\item Access to a partial implementation of innovative scheduling code, enhancing their existing systems. 
 \end{itemize}
