--- a/memos/decision-brain/main.tex
+++ b/memos/decision-brain/main.tex
@@ -7,7 +7,7 @@
 \usepackage{enumitem}
 \usepackage{fancyhdr}
 \usepackage{fontspec}
-\usepackage[margin=1in]{geometry}
+\usepackage[margin=2.5cm]{geometry}
 \usepackage{graphicx}
 \usepackage{hyperref}
 \usepackage{ifthen}
@@ -39,7 +39,7 @@
 	\input{./summary.tex}
 	\input{./goals-of-external-stay.tex}
 	\input{./roadmap.tex}
-	% \input{./personal.tex}
+	\input{./personal.tex}
 	\input{./technical.tex}
 	% \input{./academic.tex}
 	\input{./appendix.tex}
