--- a/memos/decision-brain/personal.tex
+++ b/memos/decision-brain/personal.tex
@@ -1,11 +1,18 @@
 \section*{Personal}
 
+I am an introverted person who prefers few but close partnerships. To perform at a high level
+I benefit immensely from having the right colleagues who provide support and complement the 
+qualities I may lack.
 
-\subsection*{Personality Test}
+I focus on designing systems on a higher level, often feeling worried if I 
+do not believe that I or my team is working on tasks that are not aligned with our final goals.
 
+This is good for inspiring and setting direction, but it is clear to me that people with other 
+qualities are also needed to make a project work and be successful.
 
+My hobbies include running (25-30 km per week), reading non-fiction on various topics not directly related to work; 
+and engaging in creative coding projects with friends.
 
-Extroversion ----------------------- Introversion   
-Extroversion ----------------------- Introversion   
-
-
+Looking ahead, I aspire to advance my career by developing maintenance scheduling systems
+either by joining a company like Decision Brain or founding my own company based on the
+knowledge that I have gained through the Ph.D. program.
