--- a/memos/decision-brain/roadmap.tex
+++ b/memos/decision-brain/roadmap.tex
@@ -1,3 +1,4 @@
+\begin{minipage}[t]{0.46\textwidth}
 \section*{Roadmap: Technical Parts}
 \begin{itemize}
 	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Model the Scheduler stakeholder 
@@ -6,8 +7,26 @@
 	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Determine a software architecture
 	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Host the API on Total Energies servers
 	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Read data from SAP
-	\item[$\square$] Write data directly to SAP
+	\item[$\square$] Write data directly to SAP 
 	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Test output with scheduler stakeholder
 	\item[$\square$] Test output with supervisor stakeholder
 	\item[$\square$] Test output with technician stakeholder
 \end{itemize}
+
+\end{minipage}
+\hfill
+\begin{minipage}[t]{0.46\textwidth}
+\section*{Roadmap: Project Parts}
+\begin{itemize}
+	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Study the relevant (and successful) literature
+	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Interview relevant stakeholders
+	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Show prototype concepts to relevant stakeholders
+	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Gain support from Total Esbjerg Maintenance Methods
+	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Gain support from Subcontractors
+	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Gain support from Total Digital Factory
+	\item[$\square$] External Stay
+	\item[$\square$] Deliver a functioning scheduling system (difficult)
+	\item[$\square$] Hand in Ph.D. thesis
+\end{itemize}
+
+\end{minipage}
