--- a/memos/decision-brain/summary.tex
+++ b/memos/decision-brain/summary.tex
@@ -1,22 +1,23 @@
 \section*{Summary}
 I am doing a research project in collaboration with Total Energies. I am in the process of modelling 
-their scheduling process in a way that will allow us to optimize their operations. My main concerns
-in this process is how to make the project succeed with the numerous decision that I have to make but 
-which I feel poorly equipped to make. My hope is that an external stay at Decision Brain will help
-me understand what the best approach are to making my project succeed. This includes both the Ph.D. and 
-potentially after my graduation. Below is a list of my main issues so far that I have failed to solve by myself. 
+their scheduling process in a way that will allow us to optimize their maintenance operations. My main concern
+in this process is how to make the project succeed with the numerous decisions that I have to make but 
+which I feel poorly equipped to make. I believe that an external stay at Decision Brain will provide the 
+expertise and guidance needed to making the project succeed or informing the future direction of my career path. 
+This includes both on the Ph.D. project and potentially after my graduation. Below is a list of my main issues so far 
+that I have failed to solve by myself. 
 
 \textbf{Main Issues:}
 \begin{itemize}
-	\item Developing the API without a frontend to get feedback 
+	\item Developing a correct API without a frontend to get user feedback, especially one the dynamic components of the API.
 	\begin{itemize}
-		\item I is hard to get the Stakeholders that are actually doing the work to understand the idea without developing a frontend.
+		\item Stakeholders struggle to grasp the concept without a visual representation, making it challenging to communicate the API's functionality.
 	\end{itemize}
 	\item Many topics are outside the scope of my research project due to a lack of the essential skills. 
 	\begin{itemize}
-		\item Stakeholder management, and UX development.
+		\item Primarily Stakeholder management and UX development.
 	\end{itemize}
-	\item Gauging the financial value of the project; whether I should continue implementing or keep it academic. 
+	\item Uncertainty about the project's financial viability and whether to continue its development within an academic setting.
 	\begin{itemize}
 		\item I think that the team at Decision Brain will be able to gauge this in less than a month.	
 	\end{itemize}
