--- a/memos/decision-brain/technical.tex
+++ b/memos/decision-brain/technical.tex
@@ -1,14 +1,14 @@
 \newpage
 \section*{Technical}
 \label{sec:technical}
-
-I will provide a high-level overview of what it is that the current application is doing. I believe that 
-this will make it clear how Decision Brain can help to make the project succeed.
-
+This section provides a high-level overview of my current application's
+architecture and methodologies. It highlights areas where collaboration with
+Decision Brain can enhance the project's success and offers insights that may
+benefit Decision Brain's own practices.
 
 \subsection*{Architecture of the Scheduling System}
-I have spend a significant part of my Ph.D. program refining and testing different architectures to enable
-meta-heuristics to coordinator state in real-time. The latest version is shown below.
+I have spent a significant part of my Ph.D. program refining and testing different architectures to enable
+meta-heuristics to coordinator state in real-time. The latest version is shown in figure~\ref{fig:ordinator:architecture}.
 
 \begin{figure}[H]
 	\centering
@@ -16,30 +16,33 @@ meta-heuristics to coordinator state in real-time. The latest version is shown b
 	\drawOrdinatorArchitecture{basisinput=1cm}
 
 	\caption{
-		High level overview of the architecture of the scheduling system. Persistence holds
-		all data whether from SAP, user-input, or other systems; the Orchestrator is the part of the 
-		system that manages the lifetimes of the metaheuristics that does the actual optimization;
-		the decision variable are all store together are are shared among all optimization meta-heuristics, 
+		High level architecture of the scheduling system. Persistence stores
+		all data, whether from SAP, user input, or other systems; the Orchestrator manages the lifetimes of the 
+		metaheuristics; the metaheuristics does the actual optimization;
+		the decision variable are all stored together and are shared among all optimizating meta-heuristics, 
 		each algorithm can write to its own state but only read the state of its neighbors; the UI components
-		each communicate with the algorithms that correspond to the individual stakeholder
+		each communicate with the algorithms that correspond to the individual stakeholder, meaning that the 
+		models also specify what each stakeholder is allowed to modify.
 	}
-
+	\label{fig:ordinator:architecture}
 \end{figure}
 
 \textbf{Key Lessons:}
 \begin{itemize}
-	\item Message passing between metaheuristics are unworkable, e.g. a microservice architecture is difficult approach. Usable scheduling
-	      system needs to be implemented on a single CPU with multi-threading, "normal" best practice for system horizontal scaling is very difficult. 
+	\item Message passing between metaheuristics are unworkable, e.g. a microservice architecture is difficult approach. A usable scheduling
+	      system needs to be implemented on a single CPU with multi-threading, "normal" best practice for horizontal scaling is difficult as 
+		  state changes quickly in metaheuristics. 
 	\item Optimization problems are difficult due to large and complex solution spaces. Allowing models/meta-heuristics
-			  to use each others solutions as parameters allows you to keep solution spaces smaller while preserving the 
-		  ability to model the system. 
-	\item The operational setting is more complex than you think and changes faster than think. Developing large integrated models 
-		  is a difficult as model changes become more difficult the larger a model gets.
+		  to use each others solutions as parameters allows you to keep solution spaces smaller while preserving the 
+		  ability to model the larger system (sacrificing global optimization which is usually meaningless in practice).
+	\item The operational setting is more complex than it appears and changes faster than you think. Developing large integrated models 
+		  is difficult as model changes become both more difficult and frequent the larger the model gets. This tends to make
+		  such scheduling systems fragile.
 \end{itemize}
 
 The key feature that this architecture enable is that we can move away from hierarchical approaches and 
 instead model each stakeholder individually with the responsibilities that exactly that person is responsible 
-for. 
+for. In figure~\ref{fig:model-setup:hexagon} we see that the system can initialize many instances of each metaheuristic, each corresponding to a stakeholder. 
 
 \begin{figure}[H]
 	\input{../../figures/model-setup-hexagon.tex}
@@ -49,39 +52,38 @@ for.
 		Each meta-heuristic (Actor-based Large Neighborhood Search, see algorithm~\ref{alg:actor-based-large-neighborhood-search} on page \pageref{alg:actor-based-large-neighborhood-search}) is here shown as a hexagon.
 		Each meta-heuristic is based on a mathematical model each of which are found in the appendix. \textbf{Notice}: this system is not 
 		hierarchical, each metaheuristic reads the solutions of the other metaheuristic but they are not dependent on them for their 
-		function.
+		function. Note here that there are two different models for the scheduler with the weekly and daily scheduling are treated differently.
 	}
+	\label{fig:model-setup:hexagon}
 \end{figure}
 
 \textbf{Key Lessons:}
-\begin{itemize}
-	\item Modelling each responsible decision maker with its own model makes stakeholder integration much easier.
-	\item Extending a smaller model/meta-heuristic is much easier than extending a model that goes across multiple decision-making stakeholders.
-	\item Model setup have both horizontal and vertical scaling, within the limits of a single CPU. 
+begin{itemize}
+	\item Modelling each responsible decision maker with its own model makes stakeholder integration easier.
+	\item Extending a smaller model/meta-heuristic is easier than extending a model that goes across multiple decision-making stakeholders.
+	\item Model setup have both horizontal and vertical scaling, within the limits of a single CPU often a neglected aspect in metaheuristics. 
 \end{itemize}
 
-
 \subsection*{Pertually Running Optimization}
-One of core principles found doing my interviews is that very complex model constraints should be modeled reactively, instead 
-of being encoded into static constraints. What is meant by this is that there are so many constraints in the real world that 
-encoding them into a model is a lost cause. So the approach that I have taken here is different, instead of modelling every
+One of the core principles found doing my interviews is that very complex model constraints should be modeled reactively, instead 
+of being encoded into static constraints. There are so many constraints in the real world that 
+encoding them into a model is a lost cause. So the approach taken here is different, instead of modelling every
 detail that is needed to make the output of each metaheuristic useful you instead model the basic constraints and then let 
 the stakeholder himself adjust the solution (in Operation Research called "interactive operation research; in the metaheuristic literature called
-"human-guided search"; and in operation management called "Human-in-the-loop"). In the figure below I have tried to show the issues 
-that seems to me to often arise when you in practice try to implement operation research approaches in practice.
+"human-guided search"; and in operation management called "Human-in-the-loop"). In figure~\ref{fig:model-setup:classic-hierarchical} I have tried to show the issues 
+that seems to arise when you in practice try to implement operation research approaches in maintenance scheduling.
 
 \begin{figure}[H]
 	\centering
 	\input{../../figures/multimodel-setup.tex}
 	\caption{
-		Here we see one of the reasons why hierarchical approaches usually occur when researchers or practitioners try to create a 
-		maintenance scheduling system. When you try to model each process as separate entities you will often get a setup where each
-		process is dependent on getting results from the previous model. This works fine going down, but it is simply a horrible solution
-		when information has to go up again.  
+		Illustrates the bottlenecks and communication challenges inherent in hierarchical models, where lower-level processes depend heavily on higher-level outputs.
 	}
+	\label{fig:model-setup:classic-hierarchical}
 \end{figure}
 
-This project takes a different approach as shown in figure~\ref{fig:asynchronous_model_setup}. Instead of running an optimization algorithm once and then providing a stakeholder with a single 
+This project takes the approach shown in figure~\ref{fig:asynchronous_model_setup}. 
+Instead of running an optimization algorithm once and then providing a stakeholder with a single 
 solution, each algorithm runs in perpetuity always optimizing against the latest available information. This means that each algorithm will
 be able to optimize based on the solutions that the other meta-heuristics finds. Also, through UI components stakeholder can interact with the
 optimization process that corresponds to his part of the larger maintenance scheduling process. 
@@ -90,7 +92,7 @@ optimization process that corresponds to his part of the larger maintenance sche
 	\centering
 	\input{../../figures/asynchronous_setup.tex}
 	\caption{
-		Having meta-heuristics continually running and coordinating state you can make a setup that is more robust to 
+		Having metaheuristics continually running and coordinating state you can make a setup that is more robust by dynamically accepting inputs from the relevant stakeholder.  
 	}
 	\label{
 		fig:asynchronous_model_setup
@@ -101,19 +103,10 @@ optimization process that corresponds to his part of the larger maintenance sche
 \begin{itemize}
 	\item Hierarchical appraochs are problematic in practice, as the knowledge and information required for a high-quality and functioning maintenance 
 		  scheduling process are usually found "lower in the hierarchy" rather than at higher levels, as managers sometimes implicitly believe.
-	\item Having metaheuristics continuously running saves alot of computations as you only need to reach initial convergence once. Making the 
-	      user experience more responsive for the end user and consecutive solutions will look similar.
-	\item  
+	% \item Limitations of Hierarchical Approaches: Hierarchical models often fail because critical operational knowledge resides at lower levels.
+	\item Having metaheuristics continuously running computational overhead as you only need to reach initial convergence once. Making the 
+	      user experience more responsive and consecutive solutions will look more similar.
+	\item Designing continuously running metaheuristics means that you have to think carefully about software architecture. Everything has to
+		  be scalable, responsive, and dynamic. 
 \end{itemize}
-
-\subsection*{Pseudo Code}
-
-All implemented algorithms are based the a variant of the Large Neighborhood Search metaheuristic with some modification to enable both message
-passing and solution state shared through atomic pointer swapping. 
-
-\begin{figure}[H]
-	\input{../../tex/algorithms/actor-based-large-neighborhood-search.tex}
-\end{figure}
-
-
 
