--- a/memos/decision-brain/appendix.tex
+++ b/memos/decision-brain/appendix.tex
@@ -14,7 +14,7 @@ passing and solution state shared through atomic pointer swapping.
 	\input{../../tex/algorithms/actor-based-large-neighborhood-search.tex}
 \end{figure}
 
-I have decided to include the mathematical models of the four different models. It is not meant to provide a through understanding
+I have decided to include the mathematical models of the four different metaheuristics. It is not meant to provide a through understanding
 but show how the larger process can be modelled through a series of smaller models. \textbf{Notice:} the "meta variables" sections are
 the decision variables (and time $\tau$) from other models that are being used in the respective model as a parameters (meaning they are 
 not variables in that specific model and that model cannot then change the value of the variable).
