--- a/memos/decision-brain/goals-of-external-stay.tex
+++ b/memos/decision-brain/goals-of-external-stay.tex
@@ -11,7 +11,7 @@ The most significant goals of the external stay are:
 
 It is my belief that I how developed a scalable approach to modelling a generic 
 maintenance scheduling system (see Section~\ref{sec:technical}). I am 
-modelling something that is similar to what is described on \cite{palmerMaintenancePlanningScheduling2019} 
+modelling something that is similar to what is described in \citet{palmerMaintenancePlanningScheduling2019} 
 which is a source that has a more practical orientation than most academic works. 
 
 My code operates on backend SAP tables and user inputs so I believe that there may be a possibility of integrating my 
@@ -19,6 +19,7 @@ code into a system at Decision Brain if this is deemed valuable. Integrating the
 Brain would allow us to evaluate its potential financial value and determine whether pursuing a
 full implementation could be mutually beneficial.
 
+\newpage
 \section*{Possible Setup of the External Stay}
 I propose to have a dedicated contact at Decision Brain during my external stay, with who I can discuss ideas and seek help from.
 
