--- a/memos/decision-brain/summary.tex
+++ b/memos/decision-brain/summary.tex
@@ -15,7 +15,7 @@ that I have failed to solve by myself.
 	\end{itemize}
 	\item Many topics are outside the scope of my research project due to a lack of the essential skills. 
 	\begin{itemize}
-		\item Primarily Stakeholder management and UX development.
+		\item Primarily stakeholder management and UX development.
 	\end{itemize}
 	\item Uncertainty about the project's financial viability and whether to continue its development within an academic setting.
 	\begin{itemize}
