--- a/memos/decision-brain/technical.tex
+++ b/memos/decision-brain/technical.tex
@@ -58,10 +58,11 @@ for. In figure~\ref{fig:model-setup:hexagon} we see that the system can initiali
 \end{figure}
 
 \textbf{Key Lessons:}
-begin{itemize}
+\begin{itemize}
 	\item Modelling each responsible decision maker with its own model makes stakeholder integration easier.
 	\item Extending a smaller model/meta-heuristic is easier than extending a model that goes across multiple decision-making stakeholders.
 	\item Model setup have both horizontal and vertical scaling, within the limits of a single CPU often a neglected aspect in metaheuristics. 
+	\item Maintenance scheduling is ~70\% coordination and ~30\% optimization.
 \end{itemize}
 
 \subsection*{Pertually Running Optimization}
