--- a/memos/decision-brain/roadmap.tex
+++ b/memos/decision-brain/roadmap.tex
@@ -1,3 +1,4 @@
+
 \begin{minipage}[t]{0.46\textwidth}
 \section*{Roadmap: Technical Parts}
 \begin{itemize}
@@ -18,7 +19,7 @@
 \begin{minipage}[t]{0.46\textwidth}
 \section*{Roadmap: Project Parts}
 \begin{itemize}
-	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Study the relevant (and successful) literature
+	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Study the relevant (practical) literature
 	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Interview relevant stakeholders
 	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Show prototype concepts to relevant stakeholders
 	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Gain support from Total Esbjerg Maintenance Methods
