--- a/memos/decision-brain/goals-of-external-stay.tex
+++ b/memos/decision-brain/goals-of-external-stay.tex
@@ -31,11 +31,5 @@ I propose to have a dedicated contact at Decision Brain during my external stay,
 \end{itemize}
 
 The main incentive for Decision Brain to partake in this project would be to get a new perspective on how to develop scheduling solutions,
-a hiring oppurtunity, getting a partial implementation of scheduling code if that is deemed relevant.
+a hiring opportunity, getting a partial implementation of scheduling code if that is deemed relevant.
 
-Incentives for Decision Brain: 
-\begin{itemize} 
-	\item Gain a fresh perspective on developing scheduling solutions. 
-	\item Opportunity to evaluate and potentially recruit a skilled researcher. 
-	\item Access to a partial implementation of innovative scheduling code, enhancing their existing systems. 
-\end{itemize}
