--- a/memos/decision-brain/personal.tex
+++ b/memos/decision-brain/personal.tex
@@ -2,11 +2,8 @@
 
 I am an introverted person who prefers few but close partnerships. To perform at a high level
 I benefit immensely from having the right colleagues who provide support and complement the 
-qualities I may lack.
-
-I focus on designing systems on a higher level, often feeling worried if I 
-do not believe that I or my team is working on tasks that are not aligned with our final goals.
-
+qualities I may lack. I focus on designing systems on a higher level, often feeling worried if I 
+do not believe that I or my team is working on tasks that are not aligned with our final goals. 
 This is good for inspiring and setting direction, but it is clear to me that people with other 
 qualities are also needed to make a project work and be successful.
 
