--- a/memos/decision-brain/summary.tex
+++ b/memos/decision-brain/summary.tex
@@ -1,13 +1,13 @@
 \section*{Summary}
 I am doing a research project in collaboration with Total Energies. I am in the process of modelling 
 their scheduling process in a way that will allow us to optimize their maintenance operations. My main concern
-in this process is how to make the project succeed with the numerous decisions that I have to make but 
+in this process is making the project succeed with the numerous decisions that I have to make but 
 which I feel poorly equipped to make. I believe that an external stay at Decision Brain will provide the 
 expertise and guidance needed to making the project succeed or informing the future direction of my career path. 
 This includes both on the Ph.D. project and potentially after my graduation. Below is a list of my main issues so far 
 that I have failed to solve by myself. 
 
-\textbf{Main Issues:}
+\textbf{My Main Issues:}
 \begin{itemize}
 	\item Developing a correct API without a frontend to get user feedback, especially one the dynamic components of the API.
 	\begin{itemize}
@@ -19,6 +19,13 @@ that I have failed to solve by myself.
 	\end{itemize}
 	\item Uncertainty about the project's financial viability and whether to continue its development within an academic setting.
 	\begin{itemize}
-		\item I think that the team at Decision Brain will be able to gauge this in less than a month.	
+		\item I think that the team at Decision Brain will be able to provide guidance here.
 	\end{itemize}
+\end{itemize}
+
+\textbf{Incentives for Decision Brain:} 
+\begin{itemize} 
+	\item Gain a fresh perspective on developing scheduling solutions. 
+	\item Opportunity to evaluate and potentially recruit a skilled researcher. 
+	\item Access to a partial implementation of innovative scheduling code.
 \end{itemize}
