--- a/figures/model-setup-hexagon.tex
+++ b/figures/model-setup-hexagon.tex
@@ -7,7 +7,7 @@
 }
 
 \newcommand{\drawModelSetupHexagon}{
-	\begin{tikzpicture}[scale=0.6, line width=1.05][]
+	\begin{tikzpicture}[scale=0.6, line width=1.05]
 
 	% We should parameterize this! I think that is the best approach!
 	\drawHexagon{ 2                      }{ 2}{dtu-blue}         {Strategic}
