--- a/memos/decision-brain/appendix.tex
+++ b/memos/decision-brain/appendix.tex
@@ -1,5 +1,5 @@
 \newpage
-\section*{Appendix}
+\section{Appendix}
 This appendix contains the pseudo-code and mathematical models associated with each metaheuristic implementation. 
 
 The mathematical models here are only guiding, as everything is implemented as metaheuristics a one-to-one mapping
