--- a/memos/decision-brain/goals-of-external-stay.tex
+++ b/memos/decision-brain/goals-of-external-stay.tex
@@ -1,4 +1,4 @@
-\section*{Goals of the External Stay}
+\section{Goals of the External Stay}
 The most significant goals of the external stay are:
 
 \begin{itemize}
@@ -10,7 +10,7 @@ The most significant goals of the external stay are:
 \end{itemize}
 
 It is my belief that I how developed a scalable approach to modelling a generic 
-maintenance scheduling system (see Section~\ref{sec:technical}). I am 
+maintenance scheduling system (see section~\ref{sec:technical}). I am 
 modelling something that is similar to what is described in \citet{palmerMaintenancePlanningScheduling2019} 
 which is a source that has a more practical orientation than most academic works. 
 
@@ -20,13 +20,13 @@ Brain would allow us to evaluate its potential financial value and determine whe
 full implementation could be mutually beneficial.
 
 \newpage
-\section*{Possible Setup of the External Stay}
+\section{Possible Setup of the External Stay}
 I propose to have a dedicated contact at Decision Brain during my external stay, with who I can discuss ideas and seek help from.
 
 \begin{itemize}
 	% TODO: This is not that great should be changed
 	\item First month: Determine if I can integrate my application in a relevant project at Decision Brain.
-	\item Second month: Work on implementing the scheduling system in Decision Brain's IT infrastructure.
+	\item Second month: Work on implementing the scheduling system in Decision Brain with weekly or biweekly feedback.
 	\item Third month: Assess the feasibility of the project and possible course corrections.
 \end{itemize}
 
