--- a/memos/decision-brain/personal.tex
+++ b/memos/decision-brain/personal.tex
@@ -1,4 +1,4 @@
-\section*{Personal}
+\section{Personal}
 
 I am an introverted person who prefers few but close partnerships. To perform at a high level
 I benefit immensely from having the right colleagues who provide support and complement the 
