--- a/memos/decision-brain/summary.tex
+++ b/memos/decision-brain/summary.tex
@@ -1,11 +1,10 @@
-\section*{Summary}
-I am doing a research project in collaboration with Total Energies. I am in the process of modelling 
+\section{Summary}
+I am doing a research project in collaboration with Total Energies. I am currently modelling 
 their scheduling process in a way that will allow us to optimize their maintenance operations. My main concern
 in this process is making the project succeed with the numerous decisions that I have to make but 
-which I feel poorly equipped to make. I believe that an external stay at Decision Brain will provide the 
+which I feel unequipped for. I believe that an external stay at Decision Brain will provide the 
 expertise and guidance needed to making the project succeed or informing the future direction of my career path. 
-This includes both on the Ph.D. project and potentially after my graduation. Below is a list of my main issues so far 
-that I have failed to solve by myself. 
+Below is a list of my main issues so far that I have struggled to solve by myself. 
 
 \textbf{My Main Issues:}
 \begin{itemize}
