--- a/tex/algorithms/actor-based-large-neighborhood-search.tex
+++ b/tex/algorithms/actor-based-large-neighborhood-search.tex
@@ -9,7 +9,7 @@
 \State \textbf{Input} $\MessageQueue$    = message queue
 \State \textbf{Input} $\ProblemInstance$ = problem instance
 \State \textbf{Input} $\Solution$        = initial schedule
-\State \textbf{Input} $\SharedSolution$  = SharedSolution
+\State \textbf{Input} $\SharedSolution$  = shared solution
 % \State $\Solution^b = \Solution$
 \Repeat \label{alg:actor-based-large-neighborhood-search:main-optimization-loop}
 	\State $\Solution^t = clone(\Solution)$ \label{alg:actor-based-large-neighborhood-search:clone-solution}
