--- a/memos/decision-brain/roadmap.tex
+++ b/memos/decision-brain/roadmap.tex
@@ -26,7 +26,7 @@
 	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Gain support from Subcontractors
 	\item[\rlap{\raisebox{0.3ex}{\hspace{0.4ex}\tiny \ding{52}}}$\square$] Gain support from Total Digital Factory
 	\item[$\square$] External Stay
-	\item[$\square$] Deliver a functioning scheduling system (difficult)
+	\item[$\square$] Deliver a functioning scheduling API (difficult)
 	\item[$\square$] Hand in Ph.D. thesis
 \end{itemize}
 
